# PanDa-comp

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  lexer.cpp  lexer.hpp  main.cpp
.github/workflows/: cmake-single-platform.yml
src/: CMakeLists.txt  codegenerator.cpp  codegenerator.hpp  codeoptimizer.cpp  codeoptimizer.hpp  lexer.cpp  lexer.hpp  main.cpp  node.cpp  node.hpp  parser.cpp  parser.hpp  token.cpp  token.hpp  treeoptimizer.cpp  treeoptimizer.hpp
src/include/: lexer.hpp  node.hpp  parser.hpp
test/: CMakeLists.txt  LexerTest.cpp  ParserTest.cpp  code.pd  main.pd
