
add_executable(pd main.cpp
        lexer.cpp
        lexer.hpp
        node.cpp
        node.hpp
        token.hpp
        parser.cpp
        parser.hpp
        treeoptimizer.cpp
        treeoptimizer.hpp
        codegenerator.cpp
        codegenerator.hpp
        codeoptimizer.cpp
        codeoptimizer.hpp)
